--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+      <form class="d-flex justify-content-between w-100 " role="search">
+        <div></div>
+        <button class="btn btn-outline-success  float-end" type="submit" (click)="authService.logout()">Logout</button>
+      </form>
+  </div>
+</nav>
 <router-outlet></router-outlet>
